#8 0521 video 관련 dto, 서비스 및 레퍼지토리 변경